HEAD
	+ Manage errors when AD failed on fulfill our requests in external
	  AD mode
	+ Give support to groups with more than 1500 members and more than
	  1000 groups in external AD mode
	+ Added validation of the domains added to the transparent proxy
	  exceptions
3.2.3
	+ Update strings to new offering
	+ Make external AD auth available for offer 2013
	+ Added http_allow to internal squid stub so proxy event does not need
	  an explicit rule
3.2.2
	+ Added missing EBox::Exceptions uses
	+ Fix group based filter access rules in external AD mode, retrieving
	  members of nested groups
	+ Correctly escape DNs and search filters or external ACL helper script
	+ Explicitly specify to listen on all IPv4 interfaces
	+ Add new config key auth_ad_negative_acl_ttl to configure negative ACL
	  cache time in external AD mode
3.2.1
	+ Transparent proxy redirection for openvpn servers' clients
	+ Moved EBox::SquidFirewall to EBox::Squid::Firewall
	+ Avoid error in access rules model when using external AD and
	  module has not been configured
	+ Improve squid group membership helper script
	+ Fixed squid basic authentication to support multi-OU
3.2
	+ Set version to 3.2
3.1.7
	+ Include domains with final slash as filtered when required
	+ Ignore 407 requests when auth is required in log helper
3.1.6
	+ Override daemons when migrating from 3.0
	+ Disable load_url_list by default to reduce CPU and memory usage
3.1.5
	+ Use DATETIME type in date column for consolidation tables
	+ Summarised report has breadcrumbs now
3.1.4
	+ Fixed regression on Delay Pools table triggered by changes in updatedRowNotify
3.1.3
	+ Mark logs as changed when an access rule is added, updated or deleted
	+ Fix duplicated entries generated by the LogHelper
	+ Prerouting rules have no iaccept chain, use ACCEPT target
	+ Adapted to updatedRowNotify call with no changes in values
	+ Added menu icon
	+ Fix parse of the dansguardian log in the LogHelper