@@ -850,8 +850,14 @@ sub _writeCronFile
     my $times;
     my @cronTimes;
 
+    my $usingExternalAD = ($self->authenticationMode() eq $self->AUTH_MODE_EXTERNAL_AD());
+    my $usingExternalADGroups = 0;
+
     my $rules = $self->model('AccessRules');
     foreach my $profile (@{$rules->filterProfiles()}) {
+        if ($usingExternalAD and exists($profile->{users})) {
+            $usingExternalADGroups = 1;
+        }
         next unless $profile->{usesFilter} and $profile->{timePeriod};
         if ($profile->{policy} eq 'deny') {
             # this is managed in squid, we don't need to rewrite DG files for it
@@ -877,6 +883,11 @@ sub _writeCronFile
         my ($hour, $min) = split (':', $time);
         my $days = join (',', sort (keys %{$times->{$time}}));
         push (@cronTimes, { days => $days, hour => $hour, min => $min });
+    }
+
+    # Synchronise AD groups every 30min
+    if ($usingExternalADGroups) {
+        push(@cronTimes, { days => '*', hour => '*', min => '*/30' });
     }
 
     $self->writeConfFile(CRONFILE, 'squid/zentyal-squid.cron.mas', [ times => \@cronTimes ]);
